--- a/pom.xml
+++ b/pom.xml
@@ -11,36 +11,11 @@
 
     <modules>
         <module>src/spigot</module>
-        <module>src/carz</module>
-        <module>src/carz</module>
+        <module>src/script</module>
     </modules>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>spigotmc</id>
-            <name>SpigotMC</name>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-
-        <repository>
-            <id>sonatype</id>
-            <name>Sonatype</name>
-            <url>https://repository.sonatype.org/content/groups/public/</url>
-        </repository>
-
-    </repositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
-            <version>1.17-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 </project>
