--- a/src/spigot/pom.xml
+++ b/src/spigot/pom.xml
@@ -20,14 +20,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>dev.marius.map</groupId>
-            <artifactId>carz</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>dev.marius.map</groupId>
+            <artifactId>script</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
